--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0"
+    "mongodb": "^6.15.0",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
