--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cloudinary": "^2.7.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.15.0",
-        "multer": "^2.0.1"
+        "multer": "^2.0.2",
+        "streamifier": "^0.1.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
